k8s/logging/filebeat-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
